spring-boot/platform-http-oauth/src/main/jkube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-http-oauth
spec:
  ingressClassName: traefik
  rules:
  - host: example.local
    http:
      paths:
      - backend:
          service:
            name: platform-http-oauth
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - example.local
    secretName: traefik-tls
